# plugin-mir-express

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
notes/: Beat and Tempo comparison.txt
src/: DescriptorAnalyser.cpp  DescriptorAnalyser.h  DescriptorDisplay.cpp  DescriptorDisplay.h  MirExpressLevelMeterLAF.h  MoodAnalyser.cpp  MoodAnalyser.h  MoodDisplay.cpp  MoodDisplay.h  OrtEnvSingleton.h  OscManager.h  OscSetupOverlay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tools/drum_detector_trainer/: download.py  model.py  preprocess.py  requirements.txt  run_all.bat  setup.bat  train_export.py
